fixed z-index part 2

--- a/src/features/StreetcodePage/Streetcode.styles.scss
+++ b/src/features/StreetcodePage/Streetcode.styles.scss
@@ -54,9 +54,4 @@ $bgImg: '@assets/images/streetcode-card/background.png';
     align-items: center;
     z-index: 100000;
     pointer-events: none;
-
-    .spinner{
-        z-index: 100001;
-    }
-
 }
